kqed/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Account_Don_t_Bother__c</fullName>
        <formula>IF(Accountdp__r.Next_Drive_Never_Again__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - Don&apos;t Bother</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_New__c</fullName>
        <formula>IF(Accountdp__r.Past_Drive_New__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <inlineHelpText>Is the related Account new to the Drive?</inlineHelpText>
        <label>Account - New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Old__c</fullName>
        <formula>IF( Accountdp__r.Past_Drive_Old__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Prev_Drives__c</fullName>
        <formula>IF(Accountdp__r.Past_Drive_1__c, &quot;W11&quot;, &quot;&quot;) &amp; &quot;,&quot; &amp;
IF(Accountdp__r.Past_Drive_2__c, &quot;W10&quot;, &quot;&quot;) &amp; &quot;,&quot; &amp;
IF(Accountdp__r.Past_Drive_3__c, &quot;S10&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - Prev Drives</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Target__c</fullName>
        <formula>IF(Accountdp__r.This_Drive_Target__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Try_Again__c</fullName>
        <formula>IF(Accountdp__r.Next_Drive_Target__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - Try Again</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountdp__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Use this to connect a Drive Premium to the giving Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Premiums/Benefits</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Inventory_Balance__c</fullName>
        <description>Inventory at Alternate Location.</description>
        <inlineHelpText>Inventory count at alternate location.</inlineHelpText>
        <label>Alternate Inventory Balance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Location__c</fullName>
        <description>Location of additional inventory</description>
        <inlineHelpText>Location of additional inventory</inlineHelpText>
        <label>Alternate Location</label>
        <picklist>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Digital Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel associated with premium.</description>
        <inlineHelpText>Channel associated with premium</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <controllingField>Station__c</controllingField>
            <picklistValues>
                <fullName>89.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Charge_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether shipping is being charged.</inlineHelpText>
        <label>Charge Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Premium__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Id &amp; &quot;/e?clone=1&amp;retURL=00OA0000004KUuf&quot;, &quot;Clone Premium&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clone Premium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club__c</fullName>
        <label>Club</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Drama Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic &amp; Folk Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Travel Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids &amp; Family Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookworm&apos;s Book Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cookbook Club</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Conductor_Pitcher_Script__c</fullName>
        <formula>&quot;&amp;id=&quot; +  Accountdp__r.Id +
&quot;&amp;queryID=[copy]a0hA00000015hw9?pv0=&quot; + Accountdp__r.Id + &quot;~pv1=&quot; + Id +
&quot;&amp;OCNR=1&quot; +
&quot;&amp;QMode=1&quot; +
&quot;&amp;OFN=Pitcher Scripts&quot; +
&quot;&amp;DefaultPDF=1&quot; +
&quot;&amp;templateID=&quot; +
IF(ISPICKVAL(Premium_Category__c, &quot;Q - Free Bonuses&quot;), &quot;a0NA0000007mvEb&quot;, &quot;a0NA00000070NXo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conductor: Pitcher Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Info__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Short summary of contact info for the Gift Certificate.</inlineHelpText>
        <label>GC Contact Info</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Bullet_Points__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Used in the Pitcher Script.</inlineHelpText>
        <label>Copy Bullet Points</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Copy_Location__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Short summary of location, not actual address. Used in Pitcher Script.</inlineHelpText>
        <label>Copy Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Needed_Merge_Field__c</fullName>
        <formula>IF(ISPICKVAL(Copy_Status__c, &quot;Need Info&quot;),
&quot;Please be sure to fax or mail any brochures, reviews, or listings about your business as soon as possible, so that we may write your script and get it to you for approval.&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Needed Merge Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Status__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>What is the status of the copy for this Premium?</inlineHelpText>
        <label>Copy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Need Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy on Its Way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info/Copy on-Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Proofed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Printed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copy_Summary__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Short summary of the copy. Used in Pitcher Script.</inlineHelpText>
        <label>Copy Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Used in Pitcher Script.</inlineHelpText>
        <label>Copy Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DJ_Packs__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>For CDs, what DJs have this as part of their &quot;Pack?&quot;</inlineHelpText>
        <label>DJ Packs</label>
        <picklist>
            <picklistValues>
                <fullName>Tom Schnabel Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garth Trinidad Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nic Harcourt Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raul Campos Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary Calamar Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liza Richardson Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Litt Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Douridas Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mario Cotto Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Rollins Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning Becomes Eclectic Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sounds Eclectic Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X1 - Tom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X2 - Garth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X3 - Nic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X4 - Raul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X5 - Gary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X6 - Liza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X7 - Anne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X8 - Chris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X9 - Mario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X10 - Henry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X100 - MBE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DJ_Picks__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>For CDs, which DJs have included this in their &quot;Picks?&quot;</inlineHelpText>
        <label>DJ Picks</label>
        <picklist>
            <picklistValues>
                <fullName>Tom Schnabel Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garth Trinidad Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nic Harcourt Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raul Campos Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary Calamar Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liza Richardson Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Litt Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Douridas Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mario Cotto Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Rollins Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning Becomes Eclectic Pick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X1 - Tom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X2 - Garth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X3 - Nic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X4 - Raul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X5 - Gary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X6 - Liza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X7 - Anne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X8 - Chris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X9 - Mario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X10 - Henry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X100 - MBE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DP_Genre__c</fullName>
        <label>DP Genre</label>
        <picklist>
            <picklistValues>
                <fullName>AD - Electronic / Ambient / Trip-Hop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF - Folk / Country / Bluegrass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - Classical / Orchestra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Early Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP - Gospel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JA - Jazz / Blues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO - Pop / Rock / Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB - Soul / Hip-Hop / R&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO - Compilation / Soundtrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP - Spoken Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO - World / Salsa / Reggae</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_mobile__c</fullName>
        <label>Description mobile</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Byline__c</fullName>
        <inlineHelpText>This is what follows the &quot;For a donation of:&quot; header on the Script.</inlineHelpText>
        <label>Full Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drive_Campaign__c</fullName>
        <label>Drive Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Drive Premiums</relationshipLabel>
        <relationshipName>Drive_Premiums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Early_Date__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Used for Drive Premium Ticket Giveaways.</inlineHelpText>
        <label>Early Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Capture of email required.</inlineHelpText>
        <label>Email required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FB_Logo_URL__c</fullName>
        <formula>/* this is color version stored in the documents folder */
/* if FB is not checked, make blank to hide image */
IF(Fringe_Benefit__c,
&quot;https://c.na7.content.force.com/servlet/servlet.FileDownload?file=015A0000001RyOv&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FB Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Logo__c</fullName>
        <formula>/* this is a checkbox on the Product record for now but should be changed to a 
cross-object formula that looks for a Member Discount Org record */

IF(Fringe_Benefit__c,
IMAGE( FB_Logo_URL__c , &apos;Member Benefit Provider&apos;, 50, 79),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Are they a Member Benefit Provider?</inlineHelpText>
        <label>FB Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMV__c</fullName>
        <label>FMV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forest_Direct_Plus_Number_c__c</fullName>
        <description>Forest Direct Plus Product Number</description>
        <inlineHelpText>Item code needed for placing order at Forest Direct Plus warehouse.</inlineHelpText>
        <label>Forest Direct SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Expense__c</fullName>
        <label>Freight Expense</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fringe_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Is this Premium related to a Fringe Benefit/Member Discount as well?</inlineHelpText>
        <label>Fringe Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Details__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Misc notes related to this Premium.</inlineHelpText>
        <label>Fulfillment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GC_Description__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>What is the Gift Certificate description? This often includes a summary of the Premium as well as details on redemption, approx value, and disclaimers. This is printed on the Gift Certificate.</inlineHelpText>
        <label>GC Description</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GC_Exp_Date__c</fullName>
        <inlineHelpText>What is the Gift Cert expiration date?</inlineHelpText>
        <label>GC Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_FileName__c</fullName>
        <description>Drive Premiums</description>
        <label>Image FileName</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Filename_Small__c</fullName>
        <label>Image Filename Small</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <formula>/*pub image format https://c.na7.content.force.com/servlet/servlet.ImageServer?id=015A0000001RkhLIAS&amp;oid=00DA00000009dls */
IF(LEN(Image_FileName__c) &gt; 0,
  &quot;https://c.na7.content.force.com/servlet/servlet.ImageServer?id=&quot; &amp; Image_FileName__c &amp; &quot;&amp;oid=00DA00000009dls&quot;,
  &apos;No Image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; &amp; Image_FileName__c , Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Balance__c</fullName>
        <label>Inventory Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <description>Location of Warehouse</description>
        <inlineHelpText>Warehouse location of items.</inlineHelpText>
        <label>Inventory Location</label>
        <picklist>
            <picklistValues>
                <fullName>Mail Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Digital Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DONOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED - Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prisma Graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santa Fe Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct / Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Packs__c</fullName>
        <description>Used for DP. A csv list of any related Package IDs contained in this Item.</description>
        <label>Item Packs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limits__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>What limits relate to this Premium? This may need to be in a special syntax for export to PledgeTaker.</inlineHelpText>
        <label>Limits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>Is this a list Premium (i.e. a will-call item)?</inlineHelpText>
        <label>List Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_description__c</fullName>
        <label>Long description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Item must be included in package.</inlineHelpText>
        <label>Not Avail. Individually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_text__c</fullName>
        <label>Mobile text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Confirmation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Drive Premiums. In the case where a particular premium should not receive a confirmation letter.</description>
        <inlineHelpText>Should a confirmation letter be sent for this Premium?</inlineHelpText>
        <label>No Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Vendor_Data__c</fullName>
        <description>Other Vendor to add to pick list</description>
        <inlineHelpText>Enter data on vendors not in Vendor field.</inlineHelpText>
        <label>Other Vendor Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Category__c</fullName>
        <label>Premium Category</label>
        <picklist>
            <controllingField>Family</controllingField>
            <picklistValues>
                <fullName>Adoption Program (e.g., Adopt-a-Whale)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassette Recording</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD-ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination Gift Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact Disc Recording</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequent Flyer Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hats and Caps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoodie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luggage other than station generics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweatshirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmedia Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-Shirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - Angel Bonuses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Books</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Shortname__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>The common nickname of this Premium during a Drive.
For tickets, it is the venue. For CDs, it’s the CD title.

This is used at times for merging into Letters when the Premium Name is not what is needed. Usually for a CD premium related to Artist.</inlineHelpText>
        <label>Premium Drive Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCodeNumber__c</fullName>
        <description>This is used to create an automatic Product Code for Drive Premiums that uses the Premium Category and this autonumber together.</description>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>ProductCodeNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pronunciation__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>How do you pronounce any key aspects of this Premium?</inlineHelpText>
        <label>Pronunciation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Limit__c</fullName>
        <description>Drive Premiums</description>
        <inlineHelpText>Did the Label give a limit to the number of Premium discs that can be acquired?</inlineHelpText>
        <label>Purchase Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>